# bakery

./: .envrc  .gitignore  Cargo.toml  FUTURE.md  README.md  TODO.md  bake.hs  bakery.agda-lib  cabal.project  check.sh  flake.nix  shell.nix  test.sh
core/: package.yaml
core/src/Bakery/: A.hs  Baking.hs  Env.hs  Identifier.hs  Input.hs  Output.hs
examples/: git-remove-old-branches.bake  package.yaml  smoke.yaml  wait-until-socket-is-open.bake
examples/echo/: bake.hs  smoke.yaml
examples/exec/: bake.hs  smoke.yaml
examples/files/: bake.hs  smoke.yaml
examples/two/: bake.hs  smoke.yaml
examples/uppercase/: bake.hs  smoke.yaml
lib/: package.yaml
lib/src/: Bakery.hs
lib/src/Bakery/: Bake.hs  Bakeable.hs  Environment.hs  Exec.hs  Existing.hs  File.hs  Identifier.hs  Path.hs  Run.hs
nix/: rust.nix  sources.json
proofs/: Category.agda  Lens.agda  Monadic.agda  Pipes.agda  StreamProcessors.agda
proofs/StreamProcessors/: Algebra.agda  Categorical.agda  Composition.agda  Core.agda  Examples.agda  Functional.agda  Monadic.agda  Processing.agda  Relation.agda
shell/: package.yaml
shell/src/Bakery/: Shell.hs
spec/: eval.yaml  file-to-stdout.bake  files.yaml  pipes.yaml  programs.yaml  run-program-with-one-argument.bake  run-simple-program.bake  run.yaml  smoke.yaml  stdin-to-file.bake  stdin-to-stdout.bake  write-static-text-to-stdout.bake
spec/fixtures/: file.in  two.in
src/: ast.rs  errors.rs  example.rs  interpreter.rs  main.rs  parsed.rs  parsers.rs  resolve.rs  streams.rs  types.rs
src/stages/: interpreter.rs  mod.rs  parser.rs  resolver.rs
(+32 files in other folders)
