[package]
name = "bakery"
version = "0.1.0"
authors = ["Samir Talwar <samir@noodlesandwich.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
nom_locate = "2.0.0"

[dev-dependencies]
proptest = "0.10.1"
